# RoboticArmSimulation

./: CMakeLists.txt  README.md
forms/: mainwindow.ui
res/: Resources.qrc  app_win32.aps  app_win32.rc  qss.qrc
res/Qss/: style1.qss
res/resources/icons/: Thumbs.db
robots/EPSON Scara/: Eslabon0.mtl  Eslabon1.mtl  Eslabon2.mtl  Eslabon3.mtl  SCARA - EH11.xml
robots/KukaKR16/: Eslabon0.mtl  Eslabon1.mtl  Eslabon2.mtl  Eslabon3.mtl  Eslabon4.mtl  Eslabon5.mtl  KukaKR16.xml
robots/LEGO/: Eslabon0.mtl  Eslabon1.mtl  Eslabon2.mtl  Eslabon3.mtl  LEGO.xml
robots/PlanarH/: Eslabon0.mtl  PlanarH.xml
robots/PlanarV/: PlanarV.xml
robots/PlanarVI/: Eslabon2.mtl  PlanarV.xml
robots/Scara/: Scara.xml
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/Graphics/: RasGeneric.cpp  RasGeneric.h  RasLink.cpp  RasLink.h  RasMath.cpp  RasMath.h  RasMatrix.cpp  RasMatrix.h  RasMesh.cpp  RasMesh.h  RasObstacle.cpp  RasObstacle.h  RasPath.cpp  RasPath.h  RasRobot.cpp  RasRobot.h  RasRobotPath.cpp  RasRobotPath.h  RasScene.cpp  RasScene.h
src/RAPID/: RAPID.C  RAPID.H  build.C  collide.C  moments.H  obb.H  overlap.C
src/Threads/: RasRobotThread.cpp  RasRobotThread.h
